# tech-challenge-1

./: .dockerignore  .env  .gitignore  Dockerfile  Dockerfile.api  README.md  avaliacao_qualidade_fase2.md  package-lock.json  package.json  relatorio_tecnico_01_cancer_mama.md  relatorio_tecnico_fase2.md  requirements-cnn.txt  requirements.txt
.github/workflows/: ci.yml  deploy.yml
cloudflare/api/: .dev.vars.example  pyproject.toml  wrangler.jsonc
data/: Anotações sobre as bases.txt  download_datasets.py
deploy/cloudflare/: deploy-worker.sh  test-worker.sh
deploy/k8s/: deployment.yaml  hpa.yaml  service.yaml
docs/: arquitetura_fase2.md  cloudflare-deploy.md  frontend.md
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.app.json  worker-configuration.d.ts  wrangler.jsonc
frontend/functions/: [[path]].ts  proxy.test.ts
frontend/public/: _headers  _routes.json
frontend/src/: App.test.tsx  App.tsx  Interpretation.test.tsx  api.test.ts  api.ts  features.ts  styles.css  (+1 more)
notebooks/: 01_cancer_mama.ipynb  02_cnn_pneumonia.ipynb  02_diabetes.ipynb  02_otimizacao_genetica_cancer_mama.ipynb  03_diabetes_detalhado.ipynb  03_interpretacao_llm_cancer_mama.ipynb  03_otimizacao_genetica_cancer_mama.ipynb  04_interpretacao_llm_cancer_mama.ipynb  sugestoes_melhoria.md  sugestoes_melhoria_diabetes.md
scripts/: export_serving_model.py
src/: api.py  edge_security.py  evaluate_llm.py  genetic_optimization.py  llm_interpretation.py  model_inference.py  modelo_serving.json  utils.py  worker.py
tests/: test_cloudflare.py  test_fase2.py
(+9 files in other folders)
